# hi-interview

./: README.md  notes.md  submit.sh
backend/: pyproject.toml
backend/db/versions/: 18e3f7fcfc17_updated_note_schema.py  6ec1cf561ae4_updated_note_created_by_required.py  7ef4b70dddb6_.py  97616699fad6_remove_completed_by_foreign_key_write_.py  9a82b2b3d367_added_note_table.py
backend/server/business/auth/: auth_verifier.py
backend/server/business/client/: schema.py  service.py
backend/server/business/note/: schema.py  service.py
backend/server/business/user/: schema.py  service.py
backend/server/data/models/: all.py  base.py  client.py  note.py  user.py
backend/server/routes/: client.py  note.py  routes.py  user.py
backend/server/shared/: databasemanager.py
backend/test/routes/: test_client.py
frontend/: package.json
frontend/src/api/: Api.ts  clients.ts  notes.ts  users.ts
frontend/src/app/(authed)/: layout.tsx
frontend/src/app/(authed)/clients/: page.tsx
frontend/src/app/(authed)/clients/[clientId]/: page.module.scss  page.tsx
frontend/src/app/(authed)/components/: CreateClientModal.tsx  NoteModal.tsx  Notes.tsx
frontend/src/app/(authed)/components/CreateClientModal/: CreateClientModal.tsx
frontend/src/app/(authed)/components/CreateNoteModal/: CreateNoteModal.tsx
frontend/src/app/(authed)/components/DeleteClientModal/: DeleteClientModal.tsx
frontend/src/app/(authed)/components/DeleteNoteModal/: DeleteNoteModal.tsx
frontend/src/app/(authed)/components/NoteModal/: NoteModal.tsx  (+1 more)
frontend/src/types/: clients.ts  notes.ts  users.ts
(+11 files in other folders)
